--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+	<label for="name">Name:</label>
+	<input type="text" id="name" required>
+	<br><br>
+	<label for="email">Email:</label>
+	<input type="email" id="email" required>
+	<br><br>
+	<label>Gender:</label>
+	<input type="radio" name="gender" required>
+	<label >male</label>
+	<input type="radio" name="gender" required>
+	<label >female</label>
+    <br></br>
+	<label for="cars">Car Brands:</label>	
+		<select id="cars">
+			<option value="bmw">BMW</option>
+			<option value="audi">Audi</option>
+			<option value="mercedez">Mercedez</option>
+		</select>
+		<br><br>
+	<label for="carage">car Age:</label>
+	<input type="Number" id="carage" required>
+	<br><br>
+	<label for="dop">Date of Purchase (dop):</label>
+	<input type="date" id="dop" required>
+	<br><br>
+	<label for="password">Password:</label>
+	<input type="Password" id="password" required>
+	<br><br>
+		<button type="submit">submit</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
